# scrython

./: .gitignore  README.md  pyproject.toml
docs/: blocks.md  life saving information i found.md  priorities.md
src/scrython/: main.py  transpiler.py  types.py
