[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "scrython"
version = "0.0.1"
authors = [
    { name="soul" },
]
description = "A simple python to scratch transpiler."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-files = ["LICENSE"]

[project.scripts]
scrython = "scrython:main.main"

[project.urls]
Homepage = "https://github.com/soulWritesCode/scrython"
Issues = "https://github.com/soulWritesCode/scrython/issues"